network.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Customer CloudFormation for provisioning resourses such CGW, VPN, VPGW, VPC, autoscaling, subnets, routeTables.

Parameters:
    EnvironmentName:
        Description: An environment name use to prefixed to resource names.
        Type: String
    VpcCIDR: 
        Description:  VPC IP range (CIDR notation).
        Type: String
        Default: 10.0.0.0/16
    PrivateSubnet1CIDR:
        Description: Private Subnet IP range (CIDR notation)for first Availability Zone
        Type: String
        Default: 10.0.1.0/24
    PrivateSubnet2CIDR:
        Description: Private Subnet IP range (CIDR notation)for Second Availability Zone
        Type: String
        Default: 10.0.2.0/24
    OnPremGateway:
        Description: Please enter the IP address of the on-prem VPN Appliance
        Type: String
        Default: 1.2.3.4

Resources:
    VPC: 
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            EnableDnsHostnames: true
            Tags: 
                - Key: Name 
                  Value: !Ref EnvironmentName

    CustomerGW:
        Type: "AWS::EC2::CustomerGateway"
        Properties:
            BgpAsn : 65000
            IpAddress: !Ref 'OnPremGateway'
            Tags:
                - Key: Name
                  Value: !Sub "${EnvironmentName} On Prem Gateway"
            Type: ipsec.1
    VPNGW:
        Type: "AWS::EC2::VPNGateway"
        Properties: 
            Type: ipsec.1
            Tags:
                - Key: Name
                  Value: !Sub "${EnvironmentName} Amazon-side Gateway"

    VPNConnector:        
        Type: "AWS::EC2::VPNConnection"
        Properties: 
            Type: ipsec.1
            StaticRoutesOnly: true
            CustomerGatewayId: 
                !Ref CustomerGW
            VpnGatewayId: 
                !Ref VPNGW

    AttachVpnGateway:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            VpcId:
                !Ref VPC
            VpnGatewayId:
                Ref: VPNGW

    PrivateSubnet1: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs '' ]
            CidrBlock: !Ref PrivateSubnet1CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

    PrivateSubnet2: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs '' ]
            CidrBlock: !Ref PrivateSubnet2CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

    PrivateRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ1)

    DefaultPrivateRoute1:
        DependsOn: AttachVpnGateway
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref VPNGW

    PrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            SubnetId: !Ref PrivateSubnet1

    PrivateRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ2)

    DefaultPrivateRoute2:
        DependsOn: AttachVpnGateway
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref VPNGW

    PrivateSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            SubnetId: !Ref PrivateSubnet2




Outputs:
    VPC:
        Description: A reference to the created VPC
        Value: !Ref VPC
        Export:
            Name: !Sub ${EnvironmentName}-VPCID

    VPNGW:
        Description: A reference to the created VPNGateway
        Value: !Ref VPNGW
        Export:
            Name: !Sub ${EnvironmentName}-VPN-GTW-ID

    AttachVpnGateway:
        Description: A reference to the created VPCGatewayAttachment
        Value: !Ref AttachVpnGateway
        Export:
            Name: !Sub ${EnvironmentName}-VPN-GTW-ATT-ID

    CustomerGW:
        Description: A reference to the created CustomerGateway
        Value: !Ref CustomerGW
        Export:
            Name: !Sub ${EnvironmentName}-VPN-CUSTOMER-GTW-ID
